[gd_scene load_steps=2 format=3 uid="uid://c5djpgqn2478m"]

[ext_resource type="Script" uid="uid://c8d21qwt2yccq" path="res://player_in_lobby.gd" id="1_sytjw"]

[node name="PlayerInLobby" type="HBoxContainer"]
script = ExtResource("1_sytjw")

[node name="PlayerName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0
text = "Имя игрока"

[node name="ReadyButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
